fixed the text spacing issue, the bug of no scroll, moved the small screen size to grid for viewing, and fixed positioning of tags

--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -7,7 +7,7 @@
 }
 
 .text-animate-hover {
-  min-width: 10px;
+  min-width: 5px;
   display: inline-block;
   animation-fill-mode: both;
 
