--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -6,7 +6,7 @@
     left: 10%;
     top: 50%;
     transform: translateY(-50%);
-    width: 50%;
+    width: 70%;
     max-height: 100%;
     text-align: left;
   }
@@ -58,7 +58,6 @@ h2 {
   font-weight: 400;
   font-size: 11px;
   font-family: sans-serif;
-  letter-spacing: 3px;
   animation: fadeIn 1s 1.8s backwards;
 }
 
